feat: form view, grid view & gallery view creation
